WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221691
[GPUP] Some media-capabilities tests fail when media in GPU Process is enabled
https://bugs.webkit.org/show_bug.cgi?id=221691
Summary
[GPUP] Some media-capabilities tests fail when media in GPU Process is enabled
Peng Liu
Reported
2021-02-10 10:26:34 PST
media/mediacapabilities/mediacapabilities-types.html platform/mac/media/mediacapabilities/mediacapabilities-encodingInfo-undefined.html platform/mac/media/mediacapabilities/vp9-decodingInfo-sw.html
Attachments
Patch
(41.14 KB, patch)
2021-02-24 13:09 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Patch
(39.70 KB, patch)
2021-02-24 13:21 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Patch
(40.52 KB, patch)
2021-02-24 15:13 PST
,
Eric Carlson
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(40.47 KB, patch)
2021-02-24 16:15 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Patch
(39.41 KB, patch)
2021-02-25 12:09 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2021-02-17 08:30:49 PST
(In reply to Peng Liu from
comment #0
)
> media/mediacapabilities/mediacapabilities-types.html
Why was this flagged in the wk2 expectations?
Peng Liu
Comment 2
2021-02-17 09:47:46 PST
They are flagged as flaky because of the GPU Process work. Now "media in GPU Process" is enabled in the test runner for Mac and iOS. It is disabled for GStreamer-based ports, right? Then maybe I need to move the change to mac-wk2 and ios-wk2.
Radar WebKit Bug Importer
Comment 3
2021-02-17 10:27:15 PST
<
rdar://problem/74439420
>
Eric Carlson
Comment 4
2021-02-24 13:09:40 PST
Created
attachment 421447
[details]
Patch
Eric Carlson
Comment 5
2021-02-24 13:21:49 PST
Created
attachment 421451
[details]
Patch
Eric Carlson
Comment 6
2021-02-24 15:13:16 PST
Created
attachment 421464
[details]
Patch
Eric Carlson
Comment 7
2021-02-24 16:15:18 PST
Created
attachment 421478
[details]
Patch
EWS
Comment 8
2021-02-25 07:46:03 PST
Tools/Scripts/svn-apply failed to apply
attachment 421478
[details]
to trunk. Please resolve the conflicts and upload a new patch.
Eric Carlson
Comment 9
2021-02-25 12:09:43 PST
Created
attachment 421552
[details]
Patch
EWS
Comment 10
2021-02-25 13:04:56 PST
Committed
r273504
: <
https://commits.webkit.org/r273504
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 421552
[details]
.
Eric Carlson
Comment 11
2021-02-25 17:10:16 PST
***
Bug 221821
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug