[GPUP] Some media-capabilities tests fail when media in GPU Process is enabled https://bugs.webkit.org/show_bug.cgi?id=221691 <rdar://problem/74439420>

Reviewed by Jer Noble.

Source/WebCore:

No new tests, this fixes existing tests.

* Headers.cmake:
* platform/cocoa/SystemBattery.h:
* platform/cocoa/SystemBattery.mm:
(WebCore::systemHasBattery):
(WebCore::systemHasAC):
(WebCore::SystemBatteryStatusTestingOverrides::singleton):
(WebCore::SystemBatteryStatusTestingOverrides::setHasBattery):
(WebCore::SystemBatteryStatusTestingOverrides::setHasAC):
(WebCore::SystemBatteryStatusTestingOverrides::setConfigurationChangedCallback):
(WebCore::setOverrideSystemHasBatteryForTesting): Deleted.
(WebCore::setOverrideSystemHasACForTesting): Deleted.
* platform/graphics/VP9Utilities.h:
(WebCore::ScreenDataOverrides::encode const):
(WebCore::ScreenDataOverrides::decode):
(WebCore::operator==):
* platform/graphics/cocoa/VP9UtilitiesCocoa.h:
* platform/graphics/cocoa/VP9UtilitiesCocoa.mm:
(WebCore::VP9TestingOverrides::singleton):
(WebCore::VP9TestingOverrides::setHardwareDecoderDisabled):
(WebCore::VP9TestingOverrides::setVP9ScreenSizeAndScale):
(WebCore::VP9TestingOverrides::setConfigurationChangedCallback):
(WebCore::vp9HardwareDecoderAvailable):
(WebCore::isVP9CodecConfigurationRecordSupported):
(WebCore::validateVPParameters):
(): Deleted.
(WebCore::setOverrideVP9HardwareDecoderDisabledForTesting): Deleted.
(WebCore::setOverrideVP9ScreenSizeAndScaleForTesting): Deleted.
(WebCore::resetOverrideVP9ScreenSizeAndScaleForTesting): Deleted.
* testing/Internals.cpp:
(WebCore::Internals::Internals):
(WebCore::Internals::setSystemHasBatteryForTesting):
(WebCore::Internals::setSystemHasACForTesting):
(WebCore::Internals::setHardwareVP9DecoderDisabledForTesting):
(WebCore::Internals::setVP9ScreenSizeAndScaleForTesting):

Source/WebKit:

* GPUProcess/GPUConnectionToWebProcess.cpp:
(WebKit::GPUConnectionToWebProcess::setMediaOverridesForTesting):
* GPUProcess/GPUConnectionToWebProcess.h:
* GPUProcess/GPUConnectionToWebProcess.messages.in:
* WebKit.xcodeproj/project.pbxproj:
* WebProcess/GPU/GPUProcessConnection.cpp:
(WebKit::GPUProcessConnection::updateMediaConfiguration):
* WebProcess/GPU/GPUProcessConnection.h:
* WebProcess/GPU/media/MediaOverridesForTesting.h: Added.
(WebKit::MediaOverridesForTesting::encode const):
(WebKit::MediaOverridesForTesting::decode):
* WebProcess/GPU/media/RemoteMediaEngineConfigurationFactory.cpp:
(WebKit::RemoteMediaEngineConfigurationFactory::registerFactory):
* WebProcess/WebProcess.cpp:
(WebKit::WebProcess::setUseGPUProcessForMedia):

LayoutTests:

* platform/wk2/TestExpectations: Un-skip tests that no longer fail.


Canonical link: https://commits.webkit.org/234581@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@273504 268f45cc-cd09-0410-ab3c-d52691b4dbfc