Source/WebCore/testing/Internals.cpp
@@ -627,13 +627,13 @@ Internals::Internals(Document& document)
 #endif
 
 #if PLATFORM(COCOA)
-    setOverrideSystemHasBatteryForTesting(WTF::nullopt);
-    setOverrideSystemHasACForTesting(WTF::nullopt);
+    SystemBatteryStatusTestingOverrides::singleton().setHasAC(WTF::nullopt);
+    SystemBatteryStatusTestingOverrides::singleton().setHasBattery(WTF::nullopt);
 #endif
 
 #if ENABLE(VP9) && PLATFORM(COCOA)
-    setOverrideVP9HardwareDecoderDisabledForTesting(false);
-    resetOverrideVP9ScreenSizeAndScaleForTesting();
+    VP9TestingOverrides::singleton().setHardwareDecoderDisabled(WTF::nullopt);
+    VP9TestingOverrides::singleton().setVP9ScreenSizeAndScale(WTF::nullopt);
 #endif
 }
 
@@ -5842,7 +5842,7 @@ bool Internals::systemHasBattery() const
 void Internals::setSystemHasBatteryForTesting(bool hasBattery)
 {
 #if PLATFORM(COCOA)
-    WebCore::setOverrideSystemHasBatteryForTesting(hasBattery);
+    SystemBatteryStatusTestingOverrides::singleton().setHasBattery(hasBattery);
 #else
     UNUSED_PARAM(hasBattery);
 #endif
@@ -5851,7 +5851,7 @@ void Internals::setSystemHasBatteryForTesting(bool hasBattery)
 void Internals::setSystemHasACForTesting(bool hasAC)
 {
 #if PLATFORM(COCOA)
-    WebCore::setOverrideSystemHasACForTesting(hasAC);
+    SystemBatteryStatusTestingOverrides::singleton().setHasAC(hasAC);
 #else
     UNUSED_PARAM(hasAC);
 #endif
@@ -5860,7 +5860,7 @@ void Internals::setSystemHasACForTesting(bool hasAC)
 void Internals::setHardwareVP9DecoderDisabledForTesting(bool disabled)
 {
 #if ENABLE(VP9) && PLATFORM(COCOA)
-    WebCore::setOverrideVP9HardwareDecoderDisabledForTesting(disabled);
+    VP9TestingOverrides::singleton().setHardwareDecoderDisabled(disabled);
 #else
     UNUSED_PARAM(disabled);
 #endif
@@ -5869,7 +5869,7 @@ void Internals::setHardwareVP9DecoderDisabledForTesting(bool disabled)
 void Internals::setVP9ScreenSizeAndScaleForTesting(double width, double height, double scale)
 {
 #if ENABLE(VP9) && PLATFORM(COCOA)
-    WebCore::setOverrideVP9ScreenSizeAndScaleForTesting(width, height, scale);
+    VP9TestingOverrides::singleton().setVP9ScreenSizeAndScale(makeOptional<ScreenDataOverrides>({ width, height, scale }));
 #else
     UNUSED_PARAM(width);
     UNUSED_PARAM(height);
